syntax = "proto3";

package internal;

option go_package = "github.com/areskiko/thatch/proto/intra";

service Internal {
	rpc GetUsers(Empty) returns (Users) {}

	rpc GetChats(Empty) returns (ChatIds) {}
	rpc GetChat(GetChatRequest) returns (Chat) {}

	rpc SendMessage(Message) returns (Empty) {}
	rpc StartChat(User) returns (Chat) {}

}

message Empty {}

message Message {
	string sender = 1;
	string text = 4;
}

message User {
	string id = 1;
	string name = 2;
}

message Users {
	repeated User users = 1;
}

message Chat {
	string id = 1;
	repeated Message messages = 2;
}

message GetChatRequest {
	string chat_id = 1;
}

message ChatIds {
	repeated string chat_ids = 1;
}
